endring av toaletter.html og css

--- a/toaletter.html
+++ b/toaletter.html
@@ -42,6 +42,8 @@
   </nav>
   <!--Wrapper som holder alle div-elementer under nav-baren-->
   <div class="wrapper">
+    <div id="overskrift"><h1>By-Kart</h1></div>
+      </div>
     <!--Søke-funksjonen over toaletter-->
     <div id="searchForm">
       <div>
